# hw_31_django_validation

./: README.md  docker-compose.yaml  pyproject.toml
ads/: admin.py  serializers.py  urls.py
ads/datasets/: ad.csv  load_csv_to_json.py
ads/migrations/: 0001_initial.py  0002_selection.py
ads/models/: ad.py  category.py  selection.py
ads/permissions/: ad.py  selection.py
ads/serializers/: ad.py  category.py
ads/views/: ad.py  category.py  selection.py
fixtures/: ad.json
hw31/: settings.py  urls.py
tests/: fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py
tests/factories/: __init__.py  ad.py  category.py  user.py
users/: admin.py  serializers.py  views.py
users/management/commands/: loadall.py
users/migrations/: 0001_initial.py
users/models/: location.py  user.py
